@@ -1290,6 +1290,26 @@ operator|.
 name|interrupt
 argument_list|()
 expr_stmt|;
+if|if
+condition|(
+name|sink
+operator|instanceof
+name|Closeable
+condition|)
+block|{
+name|IOUtils
+operator|.
+name|cleanup
+argument_list|(
+name|LOG
+argument_list|,
+operator|(
+name|Closeable
+operator|)
+name|sink
+argument_list|)
+expr_stmt|;
+block|}
 try|try
 block|{
 name|sinkThread
@@ -1311,26 +1331,6 @@ argument_list|(
 literal|"Stop interrupted"
 argument_list|,
 name|e
-argument_list|)
-expr_stmt|;
-block|}
-if|if
-condition|(
-name|sink
-operator|instanceof
-name|Closeable
-condition|)
-block|{
-name|IOUtils
-operator|.
-name|cleanup
-argument_list|(
-name|LOG
-argument_list|,
-operator|(
-name|Closeable
-operator|)
-name|sink
 argument_list|)
 expr_stmt|;
 block|}
