@@ -22,6 +22,26 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|Closeable
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|*
@@ -3230,6 +3250,226 @@ operator|.
 name|countDown
 argument_list|()
 expr_stmt|;
+name|ms
+operator|.
+name|stop
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+comment|/**    * Class to verify HADOOP-11932. Instead of reading from HTTP, going in loop    * until closed.    */
+DECL|class|TestClosableSink
+specifier|private
+specifier|static
+class|class
+name|TestClosableSink
+implements|implements
+name|MetricsSink
+implements|,
+name|Closeable
+block|{
+DECL|field|closed
+name|boolean
+name|closed
+init|=
+literal|false
+decl_stmt|;
+DECL|field|collectingLatch
+name|CountDownLatch
+name|collectingLatch
+decl_stmt|;
+DECL|method|TestClosableSink (CountDownLatch collectingLatch)
+specifier|public
+name|TestClosableSink
+parameter_list|(
+name|CountDownLatch
+name|collectingLatch
+parameter_list|)
+block|{
+name|this
+operator|.
+name|collectingLatch
+operator|=
+name|collectingLatch
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|init (SubsetConfiguration conf)
+specifier|public
+name|void
+name|init
+parameter_list|(
+name|SubsetConfiguration
+name|conf
+parameter_list|)
+block|{     }
+annotation|@
+name|Override
+DECL|method|close ()
+specifier|public
+name|void
+name|close
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|closed
+operator|=
+literal|true
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|putMetrics (MetricsRecord record)
+specifier|public
+name|void
+name|putMetrics
+parameter_list|(
+name|MetricsRecord
+name|record
+parameter_list|)
+block|{
+while|while
+condition|(
+operator|!
+name|closed
+condition|)
+block|{
+name|collectingLatch
+operator|.
+name|countDown
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+annotation|@
+name|Override
+DECL|method|flush ()
+specifier|public
+name|void
+name|flush
+parameter_list|()
+block|{     }
+block|}
+comment|/**    * HADOOP-11932    */
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|5000
+argument_list|)
+DECL|method|testHangOnSinkRead ()
+specifier|public
+name|void
+name|testHangOnSinkRead
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+operator|new
+name|ConfigBuilder
+argument_list|()
+operator|.
+name|add
+argument_list|(
+literal|"*.period"
+argument_list|,
+literal|8
+argument_list|)
+operator|.
+name|add
+argument_list|(
+literal|"test.sink.test.class"
+argument_list|,
+name|TestSink
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+operator|.
+name|save
+argument_list|(
+name|TestMetricsConfig
+operator|.
+name|getTestFilename
+argument_list|(
+literal|"hadoop-metrics2-test"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|MetricsSystemImpl
+name|ms
+init|=
+operator|new
+name|MetricsSystemImpl
+argument_list|(
+literal|"Test"
+argument_list|)
+decl_stmt|;
+name|ms
+operator|.
+name|start
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+name|CountDownLatch
+name|collectingLatch
+init|=
+operator|new
+name|CountDownLatch
+argument_list|(
+literal|1
+argument_list|)
+decl_stmt|;
+name|MetricsSink
+name|sink
+init|=
+operator|new
+name|TestClosableSink
+argument_list|(
+name|collectingLatch
+argument_list|)
+decl_stmt|;
+name|ms
+operator|.
+name|registerSink
+argument_list|(
+literal|"closeableSink"
+argument_list|,
+literal|"The sink will be used to test closeability"
+argument_list|,
+name|sink
+argument_list|)
+expr_stmt|;
+comment|// trigger metric collection first time
+name|ms
+operator|.
+name|onTimerEvent
+argument_list|()
+expr_stmt|;
+comment|// Make sure that sink is collecting metrics
+name|assertTrue
+argument_list|(
+name|collectingLatch
+operator|.
+name|await
+argument_list|(
+literal|1
+argument_list|,
+name|TimeUnit
+operator|.
+name|SECONDS
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
 name|ms
 operator|.
 name|stop
